--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "keywords": [],
   "type": "module",
-  "license": "ISC",
+  "private": true,
+  "license": "SEE LICENSE IN LICENSE.md",
   "description": "",
   "dependencies": {
     "@arcjet/node": "^1.0.0-beta.1",
